[metadata]
name = fletcarousel
version = 0.0.3
author = naderidev
author_email = mohammadrezanaderi84@gmail.com
description = Simple carousel sliders for flet framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/naderidev/flet-carousel
keywords = flet, carousel, slideshow, slider, python, flet-carousel, fletcarousel
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
[options]
package_dir =
    = fletcarousel
python_requires = >=3.10

[options.packages.find]
where = fletcarousel